--- a/style.css
+++ b/style.css
@@ -12,6 +12,36 @@
     --menuColour: rgb(6, 4, 122);
     font-size: larger;
 }
+.Contributors{
+	text-align: center;
+}
+.loginbox{
+	width: 420px;
+	height:	160px;
+	background: #808080;
+	color: #fff;
+	top: 50%;
+	left: 50%;
+	position: absolute;
+	transform: translate(-50%,50%);
+	box-sizing: border-box;
+	padding: px 30px;
+}
+.loginbox p{
+	margin:0;
+	padding:0;
+	font-weight:bold;
+}
+.loginbox input{
+	width:100%;
+	margin-bottom: 20px;
+}
+.loginbox input[type="text"], input[type="password"]
+{
+	border: none;
+	border-bottom: 1px solid #fff;
+	background transparent;
+}
 p {
     text-align: center;
     color:rgb(0, 0, 0)
@@ -25,6 +55,7 @@ body {
 }
 
 a {
+	text-align: center;
     color: var(--normalTextColour);
     transition-duration: 0.4s;
     -webkit-transition-duration: 0.4s; /* Safari */
